Сделала страницу разметки каталога

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <header>
 	<nav>
-		<ul>
-			<li><a href="blank.html">Информация</li>
-			<li><a href="photovideo.html">Фото и Видео</li>
-			<a>
+		<a>
       		<img src="" width="138" height="70" alt="Логотип «City of sedona»"> </a>
-			<li><a href="map.html">Карта штата</li>
-			<li><a href="catalog.html">Гостиницы</li>
+		<ul>
+			<li><a href="blank.html">Информация</a></li>
+			<li><a href="photovideo.html">Фото и Видео</a></li>
+			<li><a href="map.html">Карта штата</a></li>
+			<li><a href="catalog.html">Гостиницы</a></li>
 		</ul>
 	</nav>
  	</header>
@@ -127,6 +127,8 @@
   </section>
 
 
+</main>
+
 <footer>
   <section>
     <h2>Как нас найти</h2>
@@ -149,12 +151,11 @@
       </li>
     </ul>
   </section>
+  <p>
+    Website by .
+    <a href="https://htmlacademy.ru">.html Academy</a>
+  </p>
 </footer>
-
-
-
-</main>
-
 
 
 
