--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header>
   <nav>
     <a href="index.html">
-          <img src="" width="138" height="70" alt="Логотип City of sedona">
+          <img src="https://via.placeholder.com/138x70" alt="Логотип City of sedona">
         </a>
     <ul>
       <li><a href="blank.html">Информация</a></li>
@@ -18,6 +18,7 @@
     </ul>
   </nav>
   </header>
+
   <main>
 	<h1>Настройки</h1>
  	<section>
@@ -27,44 +28,45 @@
         <legend>Инфраструктра:</legend>
         <ul>
           <li>
-<input type="checkbox" name="Бассейн" id="Бассейн" checked>
-            <label for="Бассейн">Бассейн</label>
+<input type="checkbox" name="Pools" id="checkbox-Pools" checked>
+            <label for="checkbox-Pools">Бассейн</label>
           </li>
            <li>
-<input type="checkbox" name="Парковка" id="Парковка">
-            <label for="Парковка">Парковка</label>
+<input type="checkbox" name="Parking" id="checkbox-Parking">
+            <label for="checkbox-Parking">Парковка</label>
           </li>
           <li>
-<input type="checkbox" name="Wi-Fi" id="Wi-Fi">
-            <label for="Wi-Fi">Wi-Fi</label>
+<input type="checkbox" name="Wi-Fi" id="checkbox-Wi-Fi">
+            <label for="checkbox-Wi-Fi">Wi-Fi</label>
           </li>
-        <ul>
+        </ul>
       </fieldset>
 
       <fieldset>
         <legend>Тип жилья:</legend>
          <ul>
           <li>
-<input type="checkbox" name="Гостиница" id="Гостиница" checked>
-            <label for="Гостиница">Гостиница</label>
+<input type="checkbox" name="Hotel" id="checkbox-hotel" checked>
+            <label for="checkbox-hotel">Гостиница</label>
           </li>
           <li>
-<input type="checkbox" name="Мотель" id="Мотель" checked>
-            <label for="Мотель">Мотель</label>
+<input type="checkbox" name="Motel" id="checkbox-Motel" checked>
+            <label for="checkbox-Motel">Мотель</label>
           </li>
            <li>
-<input type="checkbox" name="Апартаменты" id="Апартаменты" checked>
-            <label for="Апартаменты">Апартаменты</label>
+<input type="checkbox" name="Appartments" id="checkbox-Appartments" checked>
+            <label for="checkbox-Appartments">Апартаменты</label>
           </li>
           	</ul>
-
           	</fieldset>
+
       <fieldset>
         <legend>Стоимость в сутки,&#8381;:</legend>
          <ul>
           <li>
-          <label>от <input type="text" name="amount" size="5" value="0"> до <input type="text" name="amount" size="5" value="3000"></label><br>
-<input type="range" min="0" max="3000">
+          <label for="min">от<input type="text" name="price-min" id="min" size="5" value="0"></label>
+          <label for="max">до<input type="text" name="price-max" id="max" size="5" value="3000"></label><br>
+<input type="range" min="0" max="3000" >
           </li>
           </ul>
       </fieldset>
@@ -73,7 +75,7 @@
   </section>
 
 <h1>Сортировка</h1>
-
+<p>Найдено:3</p>
   <ul>
     <li>По цене</li>
     <li>
@@ -83,6 +85,7 @@
       <a href="blank.html">По рейтингу</a>
     </li>
   </ul>
+  <p><img src="https://via.placeholder.com/11x10" alt="pointer"> <img src="https://via.placeholder.com/11x10" alt="pointer"></p>
 
   <section>
   	<h2>Отсортированные гостиницы</h2>
@@ -90,11 +93,12 @@
   		<li>
   			<a href="hotels.html">
 <h3>Amara Resort & Spa</h3>
-<p><img src="" width="135" height="90" alt="SPA"></p>
-<p>Гостиница от 4000</p></a>
+<p><img src="https://via.placeholder.com/135x90" alt="SPA"></p>
+<p>Гостиница от 4000</p>
+</a>
 <button type="button">Подробнее</button> <button type="button">Забронировать</button>
 <p>Рейтинг:8,5</p>
-<p><img src="" width="19" height="17" alt="star"> <img src="" width="19" height="17" alt="star"> <img src="" width="19" height="17" alt="star"> <img src="" width="19" height="17" alt="star"> </p>
+<p><img src="https://via.placeholder.com/19x17" alt="star"> <img src="https://via.placeholder.com/19x17" alt="star"> <img src="https://via.placeholder.com/19x17" alt="star"> <img src="https://via.placeholder.com/19x17" alt="star"> </p>
   		</li>
 
   		
@@ -102,22 +106,22 @@
   		<li>
   			<a href="hotels.html">
 <h3>Desert Quail Inn</h3>
-<p><img src="" width="135" height="90" alt="INN"></p>
+<p><img src="https://via.placeholder.com/135x90" alt="INN"></p>
 <p>Гостиница от 3000</p></a>
 <button type="button">Подробнее</button> <button type="button">Забронировать</button>
 <p>Рейтинг:8,9</p>
-<p><img src="" width="19" height="17" alt="star"> <img src="" width="19" height="17" alt="star"> <img src="" width="19" height="17" alt="star"></p>
+<p><img src="https://via.placeholder.com/19x17" alt="star"> <img src="https://via.placeholder.com/19x17" alt="star"> <img src="https://via.placeholder.com/19x17" alt="star"></p>
   		</li>
   		
 
   		<li>
   			<a href="hotels.html">
 <h3>Villas at Poco Diablo</h3>
-<p><img src="" width="135" height="90" alt="Diablo"></p>
+<p><img src="https://via.placeholder.com/135x90" alt="Diablo"></p>
 <p>Гостиница от 2000</p></a>
 <button type="button">Подробнее</button> <button type="button">Забронировать</button>
 <p>Рейтинг:9,2</p>
-<p><img src="" width="19" height="17" alt="star"> <img src="" width="19" height="17" alt="star"></p>
+<p><img src="https://via.placeholder.com/19x17" alt="star"> <img src="https://via.placeholder.com/19x17" alt="star"></p>
   		</li>
 
  	</ul>
