Подгрузила изображения и добавила контентные на страницы

--- a/catalog.html
+++ b/catalog.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Гостиницы</title>
+    <link rel="icon" href="favicon.ico">
     </head>
   <body>
     <header>
   <nav>
     <a href="index.html">
-          <img src="https://via.placeholder.com/138x70" alt="Логотип City of sedona">
-        </a>
+          <img src="img/logo.jpg" width="138" height="70" alt="Треугольный логотип Город Седона"> </a>
     <ul>
       <li><a href="blank.html">Информация</a></li>
       <li><a href="photovideo.html">Фото и Видео</a></li>
@@ -93,7 +93,7 @@
   		<li>
   			<a href="hotels.html">
 <h3>Amara Resort & Spa</h3>
-<p><img src="https://via.placeholder.com/135x90" alt="SPA"></p>
+<p><img src="img/Layer 21.jpg" width="135" height="90" alt="Красное здание на фоне красных гор"></p>
 <p>Гостиница от 4000</p>
 </a>
 <button type="button">Подробнее</button> <button type="button">Забронировать</button>
@@ -106,7 +106,7 @@
   		<li>
   			<a href="hotels.html">
 <h3>Desert Quail Inn</h3>
-<p><img src="https://via.placeholder.com/135x90" alt="INN"></p>
+<p><img src="img/Layer 89.jpg" width="135" height="90" alt="Мотель у дороги с вывеской INN"></p>
 <p>Гостиница от 3000</p></a>
 <button type="button">Подробнее</button> <button type="button">Забронировать</button>
 <p>Рейтинг:8,9</p>
@@ -117,7 +117,7 @@
   		<li>
   			<a href="hotels.html">
 <h3>Villas at Poco Diablo</h3>
-<p><img src="https://via.placeholder.com/135x90" alt="Diablo"></p>
+<p><img src="img/Rectangle.jpg" width="135" height="90" alt="Одноэтажное здание вблизи лужайки"></p>
 <p>Гостиница от 2000</p></a>
 <button type="button">Подробнее</button> <button type="button">Забронировать</button>
 <p>Рейтинг:9,2</p>
