--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="icon" href="favicon.ico">
   </head>
+
+  
   <body>
 
     <header>
 	<nav>
 		<a>
-      		<img src="https://via.placeholder.com/138x70" alt="Логотип City of sedona"> </a>
+      <img src="img/logo.jpg" width="138" height="70" alt="Треугольный логотип Город Седона"> </a>
+      		
 		<ul>
 			<li><a href="blank.html">Информация</a></li>
 			<li><a href="photovideo.html">Фото и Видео</a></li>
@@ -27,7 +31,7 @@
 
 		<h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
 
-	<img src="https://via.placeholder.com/188x45" alt="Логотип Welcome">
+	<img src="img/Group 1.svg" width="457" height="336" alt="Большой логотип с Приветствием и вводным описанием курорта Седона">
 	
 
 	
@@ -47,7 +51,7 @@
       	<p>-№1-</p>
         <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         	<a href="#">
-        <img src="https://via.placeholder.com/800x256" alt="Размытая картинка">
+        <img src="https://via.placeholder.com/800x256"  alt="Размытая картинка">
       </a>
         <ul>
           <li>
@@ -69,7 +73,7 @@
         <img src="https://via.placeholder.com/64x77" alt="Подарок icon-3"></a>
         <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь
       <a href="#">
-        <img src="https://via.placeholder.com/800x256" alt="Каньон">
+        <img src="https://via.placeholder.com/800x256" alt="Красный каньон">
       </a>
     </p>
           </li>
@@ -127,7 +131,7 @@
  <section>
   <h2>Карта</h2>
   <a href="#">
-        <img src="https://via.placeholder.com/1199x594" alt="Карта"></a></section>
+        <img src="img/map.jpg" width="1199" height="594" alt="Карта с указателем города Седона"></a></section>
 
 
 </main>
