Исправила ошибки в стилизации внутренней страницы

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <a class="main-header-logo">
         <img src="img/logo.svg" width="138" height="70" alt="Треугольный логотип Город Седона">
       </a>
+      <div class="main-header-bar">
       <div class="main-navigation-wrapper">
-        <div class="container">
           <ul class="site-navigation">
             <li><a href="blank.html">Информация</a></li>
             <li><a href="photovideo.html">Фото и Видео</a></li>
             <li><a href="map.html">Карта штата</a></li>
             <li><a href="catalog.html">Гостиницы</a></li>
           </ul>
-        </div>
       </div>
+     </div>
     </nav>
   </header>
   
@@ -150,7 +150,7 @@
         
         <section class="footer-social">
           <h2>Соц. Сети</h2>
-          <ul>
+          <ul class="social-list">
             <li>
               <a class="social-button" href="#">
                 <img src="img/twitter.svg" width="48" height="48" alt="Иконка Твиттер">
